# Kockasfulu

./: CMakeLists.txt  CMakePresets.json  README.md  TODO.md
src/: main.cpp
